# OS_Labs_SPBPU_2019

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp
chepulis.mikhail/lab_1/: build.sh  config.txt  lab_1.cpp
chepulis.mikhail/lab_2/: makefile
chepulis.mikhail/lab_3/: makefile
core/: ConfigHolder.cpp  ConfigHolder.h  inotify.hpp  utils.hpp
denisov.pavel/lab1/: CMakeLists.txt  bk_files_copy_daemon.cpp  bk_files_copy_daemon.h  build.sh  common.h  conf.cfg  daemon_utils.cpp  daemon_utils.h  main.cpp
denisov.pavel/lab2/: makefile
denisov.pavel/lab3/: makefile  test.cfg
dunaeva.olga/lab1/: config.cfg  config.cpp  config.h  daemon.cpp  daemon.h  main.cpp
dunaeva.olga/lab1_var6/: config.conf  config.cpp  config.h  daemon.cpp  daemon.h  main.cpp
dunaeva.olga/lab2/: makefile
fedorov.dmitrii/lab1/: build.sh  config.cfg  main.cpp
gritsaenko.nikita/lab1/: config.txt  lab1.cpp
gritsaenko.nikita/lab2/: Makefile
gritsaenko.nikita/lab3/: Makefile  lock_free_stack.hpp  lock_stack.hpp  stack.hpp  test.cpp  tester.hpp  utils.hpp
kononov.pavel/lab1/: build.sh  config.conf  config_reader.cpp  config_reader.h  daemon.cpp  daemon.h  daemon_lab_5  daemon_source.cpp  file_deleter.cpp  file_deleter.h  main.cpp
kononov.pavel/lab2/: client_fifo  client_mq  client_sock  host_fifo  (+3 more)
kozlov.ilya/lab1/: .gitignore  CMakeLists.txt  build.sh  daemon.cc  daemon.h  lab1.conf  main.cc  parser.cc  parser.h
kozlov.ilya/lab2/conn/: CMakeLists.txt  build.sh  conn_fifo.cpp  conn_mq.cpp  conn_seg.cpp  makefile
kozlov.ilya/lab2/goat/: CMakeLists.txt  build.sh  makefile
kozlov.ilya/lab2/goat/src/: client.cpp  goat.cpp  goat.h
labs/: ~$lab3.docx
plaksin.daniil/: build.sh  daemon.cpp
sergeev.georgii/: .gitignore
tunikov.dmitrii/lab1/: CMakeLists.txt  build.sh  inotify.cfg  main.cpp
tunikov.dmitrii/lab1/core/: ConfigHolder.cpp  ConfigHolder.h  Exception.hpp  inotify.hpp  utils.hpp
zhukov.alexander/: .gitignore
(+461 files in other folders)
