cmake_minimum_required(VERSION 3.10)
if(POSTFIX)
    message(STATUS "Building for connection type = " ${POSTFIX})
else()
    message(FATAL_ERROR "Need to set -DPOSTFIX flag with connection type")
endif()
project(conn_${POSTFIX})
include_directories(../interface)
set(CMAKE_CXX_STANDARD 11)
add_library(${PROJECT_NAME} SHARED conn_${POSTFIX}.cpp)
target_link_libraries(${PROJECT_NAME} rt)