cmake_minimum_required(VERSION 3.10)
if(POSTFIX)
    message(STATUS "Building for connection type = " ${POSTFIX})
else()
    message(FATAL_ERROR "Need to set -DPOSTFIX flag with connection type")
endif()
project(client_${POSTFIX})
set(CMAKE_CXX_STANDARD 11)
include_directories(../interface)
add_executable(${PROJECT_NAME} src/client.cpp src/goat.cpp src/goat.h)
find_library(CONN_LIB NAMES conn_${POSTFIX} PATHS ${PROJECT_SOURCE_DIR}/../conn_${POSTFIX}/)
if(NOT DEFINED CONN_LIB)
    message(FATAL_ERROR "Can't find connection library")
endif()
target_link_libraries(${PROJECT_NAME} pthread)
target_link_libraries(${PROJECT_NAME} ${CONN_LIB})